# src/modules/teachers/teachers.controller.ts
@@ -1,0 +1,55 @@
+import {
+  Body,
+  Controller,
+  Delete,
+  Get,
+  Param,
+  ParseIntPipe,
+  Patch,
+  Post,
+  Query,
+} from '@nestjs/common';
+import { TeachersService } from './teachers.service';
+import {
+  CreateTeacherDto,
+  QueryTeacherDto,
+  UpdateTeacherDto,
+} from './dto/teacher.dto';
+
+@Controller('teachers')
+export class TeachersController {
+  constructor(private readonly teachersService: TeachersService) {}
+
+  @Get()
+  findAll(@Query() query: QueryTeacherDto) {
+    return this.teachersService.findAll(query);
+  }
+
+  @Get('options')
+  findOptions() {
+    return this.teachersService.findOptions();
+  }
+
+  @Get(':id')
+  findOne(@Param('id', ParseIntPipe) id: number) {
+    return this.teachersService.findOne(id);
+  }
+
+  @Post()
+  create(@Body() createTeacherDto: CreateTeacherDto) {
+    return this.teachersService.create(createTeacherDto);
+  }
+
+  @Patch(':id')
+  update(
+    @Param('id', ParseIntPipe) id: number,
+    @Body() updateTeacherDto: UpdateTeacherDto,
+  ) {
+    return this.teachersService.update(id, updateTeacherDto);
+  }
+
+  @Delete(':id')
+  remove(@Param('id', ParseIntPipe) id: number) {
+    return this.teachersService.remove(id);
+  }
+}
